# strong_type

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
cmake/: Settings.cmake  Tools.cmake
include/strong_type/: s_type.h  s_type.hpp  s_type_addable.h  s_type_comparable.h  s_type_decrementable.h  s_type_dividable.h  s_type_features.h  s_type_features.hpp  s_type_incrementable.h  s_type_multiplicable.h  s_type_subtractable.h  s_type_traits.h  static_string.hpp  strong_type.h  strong_type.hpp
include/strong_type/features/: s_type_addable.h  s_type_addable.hpp  s_type_bitable.h  s_type_bitwiseable.h  s_type_bitwiseable.hpp  s_type_comparable.h  s_type_comparable.hpp  s_type_decrementable.h  s_type_decrementable.hpp  s_type_dividable.h  s_type_dividable.hpp  s_type_features.h  s_type_incrementable.h  s_type_incrementable.hpp  s_type_multiplicable.h  s_type_multiplicable.hpp  s_type_subtractable.h  s_type_subtractable.hpp  s_type_traits.h  s_type_traits.hpp  static_string.hpp  strip.hpp
include/strong_type/impl/: s_type.hpp  s_type_concpts.hpp  strip.hpp
include/strong_type/impl/features/: s_type_addable.hpp  s_type_bitwiseable.hpp  s_type_comparable.hpp  s_type_decrementable.hpp  s_type_dividable.hpp  s_type_incrementable.hpp  s_type_multiplicable.hpp  s_type_subtractable.hpp
tests/: CMakeLists.txt  addable_feature_test.cpp  bitwiseable_feature_test.cpp  comparable_feature_test.cpp  decrementable_feature_test.cpp  dividable_feature_test.cpp  incrementable_feature_test.cpp  multiplicable_feature_test.cpp  st_methods_test.cpp  static_string_test.cpp  subtractable_feature_test.cpp  test.cpp
